--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.0",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.8.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "3.1.0"
   },
   "scripts": {
